[package]
name = "slider-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8.1"
gloo-console = "0.2.3"

yew-element-ui = { path = "../../" }
